09 Admin/Terminal Saved Chats/Terminal Saved Output8.txt
Last login: Fri May  1 11:18:11 on ttys000
jd@JD-MacBook-Pro ~ % >....                                                     
  -framework SwiftUI \
  -framework AppKit

if [ $? -ne 0 ]; then
  echo ""
  echo "Compile failed. Paste the errors."
  exit 1
fi

echo ""
echo "Compile passed."

echo ""
echo "===== REBUILDING NOCTYRIUM ====="
"$BUILD"

echo ""
echo "Fixed."
echo "Swift backup:"
echo "$BACKUP"
echo ""
echo "Build script backup:"
echo "$BUILD_BACKUP"

===== PATCHING BUILD SCRIPT: NOCTYRIUM-ONLY QUIT / DOCK =====

===== VERIFY TRACKER STATE =====
123:    @State private var trackerItems: [CourseTrackerItem] = []

===== VERIFY SWEEP =====
321:    func runSuggestionSweep() {
322-        refreshing = true
323-
324-        DispatchQueue.global(qos: .userInitiated).async {
325-            let freshTasks = loadTasks(taskFile)
326-            let freshJournal = loadJournal(journalFile)
327-            let freshNB3 = loadCourseTracker(nb3TrackerFile)
328-            let freshBSCE = loadCourseTracker(bsceTrackerFile)
329-
330-            let built = buildSmartSuggestions(
331-                tasks: freshTasks,
332-                journal: freshJournal,
333-                nb3Items: freshNB3,
334-                bsceItems: freshBSCE
335-            )
336-
337-            DispatchQueue.main.async {
338-                tasks = freshTasks
339-                journal = freshJournal
340-                trackerItems = freshNB3
341-                bsceItems = freshBSCE
342-                smartSuggestions = built
343-                status = "Suggestion sweep refreshed from Tasks, Journal, NB3, and BSCE."
344-                refreshing = false
345-            }
346-        }

===== COMPILE TEST =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:189:34: error: incorrect argument label in call (have 'stats:logs:suggestions:refreshSuggestions:trackerItems:bsceItems:selectedTrackerModule:runHub:sort:review:openInbox:openAnkiMedia:logLecture:logAnki50:logAnki100:logStudy60:standupToday:standupTomorrow:standupBlockers:standupEnergy:standupRating:saveStandup:', expected 'stats:logs:suggestions:refreshSuggestions:nb3Items:bsceItems:selectedTrackerModule:runHub:sort:review:openInbox:openAnkiMedia:logLecture:logAnki50:logAnki100:logStudy60:standupToday:standupTomorrow:standupBlockers:standupEnergy:standupRating:saveStandup:')
                    DashboardPage(
                                 ^
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:806:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:914:31: error: cannot find 'trackerItems' in scope
                trackerItems: trackerItems,
                              ^~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1740:55: error: cannot find 'trackerItems' in scope
        selectedModule == "T2 • BSCE" ? bsceItems : trackerItems
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2262:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2842:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2846:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Compile failed. Paste the errors.

Saving session...
...copying shared history...
...saving history...truncating history files...
...completed.

[Process completed]

